--- a/drone/public/assets/scss/components/_button.scss
+++ b/drone/public/assets/scss/components/_button.scss
@@ -15,12 +15,12 @@
 }
 
 .input--email {
-    background: url(../../src/icons/icon_mail.svg) no-repeat scroll rem(7) rem(7);
+    background: url(../../../src/icons/icon_mail.svg) no-repeat scroll rem(7) rem(7);
     padding-left: rem(50);
 }
 
 .input--password {
-    background: url(../../src/icons/icon_password.svg) no-repeat rem(7) rem(6);
+    background: url(../../../src/icons/icon_password.svg) no-repeat rem(7) rem(6);
     padding-left: rem(50);
 }
 
